// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render error for invalid form submission 1`] = `
<section>
  <form
    action=""
    className="expense-form"
    onSubmit={[Function]}
  >
    <ForwardRef(TextareaAutosize)
      className="expense-form__title"
      id="title"
      onChange={[Function]}
      placeholder="Title"
      value=""
    />
    <fieldset
      className="expense-form__date"
    >
      <r
        allowSameDay={false}
        className="date-picker expense-form__date__input"
        customInput={<ForwardRef />}
        customTimeInput={null}
        dateFormat="dd/MM/yyyy"
        dateFormatCalendar="LLLL yyyy"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        enableTabLoop={true}
        excludeScrollbar={true}
        focusSelectedMonth={false}
        id="date-picker"
        monthsShown={1}
        nextMonthButtonLabel="Next Month"
        nextYearButtonLabel="Next Year"
        onBlur={[Function]}
        onCalendarClose={[Function]}
        onCalendarOpen={[Function]}
        onChange={[Function]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onInputClick={[Function]}
        onInputError={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        preventOpenOnFocus={false}
        previousMonthButtonLabel="Previous Month"
        previousYearButtonLabel="Previous Year"
        readOnly={false}
        renderDayContents={[Function]}
        selected={2021-12-21T11:15:56.996Z}
        selectsStart={true}
        shouldCloseOnSelect={true}
        showFourColumnMonthYearPicker={false}
        showFullMonthYearPicker={false}
        showMonthYearPicker={false}
        showPopperArrow={true}
        showPreviousMonths={false}
        showQuarterYearPicker={false}
        showTimeInput={false}
        showTimeSelect={false}
        showTwoColumnMonthYearPicker={false}
        showYearPicker={false}
        strictParsing={false}
        timeCaption="Time"
        timeInputLabel="Time"
        timeIntervals={30}
        withPortal={false}
        yearItemNumber={12}
      />
    </fieldset>
    <fieldset
      className="expense-form__amount"
    >
      <Input
        className="expense-form__amount"
        data-style="secondary"
        id="amount"
        label="Amount"
        onChange={[Function]}
        type="text"
        validator={[Function]}
        value=""
      />
    </fieldset>
    <fieldset
      className="expense-form__contacts"
    >
      <_default
        id="contact"
        label="Contact"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Mark Matthews",
              "value": "124",
            },
            Object {
              "label": "Alex Vincent",
              "value": "1642",
            },
            Object {
              "label": "Bank Of Ireland",
              "value": "764",
            },
          ]
        }
        value={
          Object {
            "id": undefined,
            "name": undefined,
          }
        }
      />
    </fieldset>
    <fieldset
      className="expense-form__categories"
    >
      <Input
        className="expense-form__categories"
        data-style="secondary"
        id="categories"
        label="Categories"
        onChange={[Function]}
        type="text"
        value=""
      />
    </fieldset>
    <fieldset
      className="expense-form__note"
    >
      <InputArea
        data-style="secondary"
        id="note"
        label="Note"
        onChange={[Function]}
        placeholder="What were the details"
        value=""
      />
    </fieldset>
    <button
      className="expense-form__submit"
      type="submit"
    >
      Confirm
    </button>
  </form>
</section>
`;

exports[`should render error for invalid form submission 2`] = `
<section>
  <form
    action=""
    className="expense-form"
    onSubmit={[Function]}
  >
    <ForwardRef(TextareaAutosize)
      className="expense-form__title"
      id="title"
      onChange={[Function]}
      placeholder="Title"
      value=""
    />
    <fieldset
      className="expense-form__date"
    >
      <r
        allowSameDay={false}
        className="date-picker expense-form__date__input"
        customInput={<ForwardRef />}
        customTimeInput={null}
        dateFormat="dd/MM/yyyy"
        dateFormatCalendar="LLLL yyyy"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        enableTabLoop={true}
        excludeScrollbar={true}
        focusSelectedMonth={false}
        id="date-picker"
        monthsShown={1}
        nextMonthButtonLabel="Next Month"
        nextYearButtonLabel="Next Year"
        onBlur={[Function]}
        onCalendarClose={[Function]}
        onCalendarOpen={[Function]}
        onChange={[Function]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onInputClick={[Function]}
        onInputError={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        preventOpenOnFocus={false}
        previousMonthButtonLabel="Previous Month"
        previousYearButtonLabel="Previous Year"
        readOnly={false}
        renderDayContents={[Function]}
        selected={2021-12-21T11:15:56.996Z}
        selectsStart={true}
        shouldCloseOnSelect={true}
        showFourColumnMonthYearPicker={false}
        showFullMonthYearPicker={false}
        showMonthYearPicker={false}
        showPopperArrow={true}
        showPreviousMonths={false}
        showQuarterYearPicker={false}
        showTimeInput={false}
        showTimeSelect={false}
        showTwoColumnMonthYearPicker={false}
        showYearPicker={false}
        strictParsing={false}
        timeCaption="Time"
        timeInputLabel="Time"
        timeIntervals={30}
        withPortal={false}
        yearItemNumber={12}
      />
    </fieldset>
    <fieldset
      className="expense-form__amount"
    >
      <Input
        className="expense-form__amount"
        data-style="secondary"
        id="amount"
        label="Amount"
        onChange={[Function]}
        type="text"
        validator={[Function]}
        value=""
      />
    </fieldset>
    <fieldset
      className="expense-form__contacts"
    >
      <_default
        id="contact"
        label="Contact"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Mark Matthews",
              "value": "124",
            },
            Object {
              "label": "Alex Vincent",
              "value": "1642",
            },
            Object {
              "label": "Bank Of Ireland",
              "value": "764",
            },
          ]
        }
        value={
          Object {
            "id": undefined,
            "name": undefined,
          }
        }
      />
    </fieldset>
    <fieldset
      className="expense-form__categories"
    >
      <Input
        className="expense-form__categories"
        data-style="secondary"
        id="categories"
        label="Categories"
        onChange={[Function]}
        type="text"
        value=""
      />
    </fieldset>
    <fieldset
      className="expense-form__note"
    >
      <InputArea
        data-style="secondary"
        id="note"
        label="Note"
        onChange={[Function]}
        placeholder="What were the details"
        value=""
      />
    </fieldset>
    <button
      className="expense-form__submit"
      type="submit"
    >
      Confirm
    </button>
  </form>
  <footer
    className="expense-form__error-box"
    open={true}
  >
    <h3>
      Warning!
    </h3>
    <p>
      ERROR: Nice try, you need to fill out all non-optional fields
    </p>
    <button
      className="expense-form__error-box__close"
      onClick={[Function]}
      value="cancel"
    >
      Close
    </button>
  </footer>
</section>
`;

exports[`should render expense form correctly 1`] = `
<section>
  <form
    action=""
    className="expense-form"
    onSubmit={[Function]}
  >
    <ForwardRef(TextareaAutosize)
      className="expense-form__title"
      id="title"
      onChange={[Function]}
      placeholder="Title"
      value=""
    />
    <fieldset
      className="expense-form__date"
    >
      <r
        allowSameDay={false}
        className="date-picker expense-form__date__input"
        customInput={<ForwardRef />}
        customTimeInput={null}
        dateFormat="dd/MM/yyyy"
        dateFormatCalendar="LLLL yyyy"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        enableTabLoop={true}
        excludeScrollbar={true}
        focusSelectedMonth={false}
        id="date-picker"
        monthsShown={1}
        nextMonthButtonLabel="Next Month"
        nextYearButtonLabel="Next Year"
        onBlur={[Function]}
        onCalendarClose={[Function]}
        onCalendarOpen={[Function]}
        onChange={[Function]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onInputClick={[Function]}
        onInputError={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        preventOpenOnFocus={false}
        previousMonthButtonLabel="Previous Month"
        previousYearButtonLabel="Previous Year"
        readOnly={false}
        renderDayContents={[Function]}
        selected={2021-12-21T11:15:56.557Z}
        selectsStart={true}
        shouldCloseOnSelect={true}
        showFourColumnMonthYearPicker={false}
        showFullMonthYearPicker={false}
        showMonthYearPicker={false}
        showPopperArrow={true}
        showPreviousMonths={false}
        showQuarterYearPicker={false}
        showTimeInput={false}
        showTimeSelect={false}
        showTwoColumnMonthYearPicker={false}
        showYearPicker={false}
        strictParsing={false}
        timeCaption="Time"
        timeInputLabel="Time"
        timeIntervals={30}
        withPortal={false}
        yearItemNumber={12}
      />
    </fieldset>
    <fieldset
      className="expense-form__amount"
    >
      <Input
        className="expense-form__amount"
        data-style="secondary"
        id="amount"
        label="Amount"
        onChange={[Function]}
        type="text"
        validator={[Function]}
        value=""
      />
    </fieldset>
    <fieldset
      className="expense-form__contacts"
    >
      <_default
        id="contact"
        label="Contact"
        onChange={[Function]}
        options={
          Array [
            Object {
              "label": "Mark Matthews",
              "value": "124",
            },
            Object {
              "label": "Alex Vincent",
              "value": "1642",
            },
            Object {
              "label": "Bank Of Ireland",
              "value": "764",
            },
          ]
        }
        value={
          Object {
            "id": undefined,
            "name": undefined,
          }
        }
      />
    </fieldset>
    <fieldset
      className="expense-form__categories"
    >
      <Input
        className="expense-form__categories"
        data-style="secondary"
        id="categories"
        label="Categories"
        onChange={[Function]}
        type="text"
        value=""
      />
    </fieldset>
    <fieldset
      className="expense-form__note"
    >
      <InputArea
        data-style="secondary"
        id="note"
        label="Note"
        onChange={[Function]}
        placeholder="What were the details"
        value=""
      />
    </fieldset>
    <button
      className="expense-form__submit"
      type="submit"
    >
      Confirm
    </button>
  </form>
</section>
`;

exports[`should render expense form with expense data 1`] = `
<section>
  <form
    action=""
    className="expense-form"
    onSubmit={[Function]}
  >
    <ForwardRef(TextareaAutosize)
      className="expense-form__title"
      onChange={[Function]}
      placeholder="Title"
      value="Food"
    />
    <fieldset
      className="expense-form__date"
    >
      <r
        allowSameDay={false}
        className="date-picker expense-form__date__input"
        customInput={<ForwardRef />}
        customTimeInput={null}
        dateFormat="dd/MM/yyyy"
        dateFormatCalendar="LLLL yyyy"
        disabled={false}
        disabledKeyboardNavigation={false}
        dropdownMode="scroll"
        enableTabLoop={true}
        excludeScrollbar={true}
        focusSelectedMonth={false}
        id="date-picker"
        monthsShown={1}
        nextMonthButtonLabel="Next Month"
        nextYearButtonLabel="Next Year"
        onBlur={[Function]}
        onCalendarClose={[Function]}
        onCalendarOpen={[Function]}
        onChange={[Function]}
        onClickOutside={[Function]}
        onFocus={[Function]}
        onInputClick={[Function]}
        onInputError={[Function]}
        onKeyDown={[Function]}
        onMonthChange={[Function]}
        onSelect={[Function]}
        onYearChange={[Function]}
        preventOpenOnFocus={false}
        previousMonthButtonLabel="Previous Month"
        previousYearButtonLabel="Previous Year"
        readOnly={false}
        renderDayContents={[Function]}
        selected={2021-04-09T00:00:00.000Z}
        selectsStart={true}
        shouldCloseOnSelect={true}
        showFourColumnMonthYearPicker={false}
        showFullMonthYearPicker={false}
        showMonthYearPicker={false}
        showPopperArrow={true}
        showPreviousMonths={false}
        showQuarterYearPicker={false}
        showTimeInput={false}
        showTimeSelect={false}
        showTwoColumnMonthYearPicker={false}
        showYearPicker={false}
        strictParsing={false}
        timeCaption="Time"
        timeInputLabel="Time"
        timeIntervals={30}
        withPortal={false}
        yearItemNumber={12}
      />
    </fieldset>
    <fieldset
      className="expense-form__amount"
    >
      <Input
        className="expense-form__amount"
        data-style="secondary"
        label="Amount"
        onChange={[Function]}
        type="text"
        validator={[Function]}
        value="10.50"
      />
    </fieldset>
    <fieldset
      className="expense-form__contacts"
    >
      <Input
        data-style="secondary"
        label="Contact"
        onChange={[Function]}
        type="text"
        value={124}
      />
    </fieldset>
    <fieldset
      className="expense-form__categories"
    >
      <Input
        className="expense-form__categories"
        data-style="secondary"
        label="Categories"
        onChange={[Function]}
        type="text"
        value="Food"
      />
    </fieldset>
    <fieldset
      className="expense-form__note"
    >
      <InputArea
        data-style="secondary"
        id="note"
        label="Note"
        onChange={[Function]}
        placeholder="What were the details"
        value="Bought food for mastication"
      />
    </fieldset>
    <button
      className="expense-form__submit"
      type="submit"
    >
      Confirm
    </button>
  </form>
</section>
`;
